# explore-ai

./: .env.example  .gitignore  .lintstagedrc  .prettierignore  .prettierrc  CLAUDE.md  Dockerfile  README.md  angular.json  build.gradle.kts  components.json  docker-compose.yml  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.conf.json  railway.toml  renovate.json  settings.gradle.kts  tsconfig.json  vercel.json  vitest.config.ts
services/text-service/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
services/text-service/examples/: usage_examples.py
services/text-service/src/: __init__.py  main.py
services/text-service/src/api/: __init__.py  routes.py  schemas.py
services/text-service/src/core/: __init__.py  config.py  llm_gateway.py
services/text-service/tests/: __init__.py  conftest.py  test_api.py  test_llm_gateway.py
services/vision-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
services/vision-service/docs/: VIDEO.md
services/vision-service/src/: __init__.py  main.py
services/vision-service/src/api/: __init__.py  image_gen.py  video.py  vision.py
services/vision-service/src/application/: __init__.py
services/vision-service/src/application/dtos/: video_dtos.py
services/vision-service/src/clients/: __init__.py  image_gen_client.py
services/vision-service/src/core/: __init__.py  config.py  dependencies.py  image_gen_config.py  video_config.py
services/vision-service/src/domain/: __init__.py
services/vision-service/src/infrastructure/: __init__.py
services/vision-service/src/providers/: __init__.py  base.py  kling.py  mock.py  pika.py  replicate.py  runway.py  sora.py
services/vision-service/src/schemas/: __init__.py  image_gen.py  video.py  vision.py
services/vision-service/tests/: conftest.py  test_api.py  test_config.py  test_dependencies.py  test_domain.py  test_providers_refactored.py  test_schemas.py  test_video.py
(+2062 files in other folders)
