[project]
name = "ai-service"
version = "0.1.0"
description = "Production-grade image recognition service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.12",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "paddlepaddle>=3.0.0",
    "paddleocr>=2.9.0",
    "ultralytics>=8.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
